Added JUnit Test cases.